--- a/src/Home/HomeCss/profile.css
+++ b/src/Home/HomeCss/profile.css
@@ -35,6 +35,7 @@
 
 .s {
   color: #272a61;
+  font-size: 2rem;
 }
 
 .btn-white-border {
@@ -85,6 +86,12 @@
   box-shadow: 0px 0 2px 0 rgba(0, 0, 0, 0.25);
 }
 
+@media (max-width: 991px) {
+  .cardStyle {
+    width: auto !important;
+  }
+}
+
 #signupLogo {
   max-height: 100px;
   margin: auto;
@@ -107,7 +114,7 @@
 }
 
 .inputDiv {
-  width: 70%;
+  width: 85%;
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -132,7 +139,7 @@ input:disabled {
 }
 
 .submitButton {
-  width: 70%;
+  width: 50%;
   height: 40px;
   margin: auto;
   display: block;
